test(general): Add coverage and test to all files

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -53,7 +53,7 @@
     }
   },
   "makeDetail": {
-    "title": "{{makeName}}",
+    "title": "Makes detail",
     "id": "Make ID: {{id}}",
     "tabs": {
       "models": "Models",
